[gd_scene load_steps=3 format=3 uid="uid://pr1y6pn052lh"]

[ext_resource type="Script" uid="uid://q817c5ex8eaf" path="res://scripts/ui/bottom_nav_bar.gd" id="1_6m2i1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6m2i1"]

[node name="BottomNavBar" type="Control"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 3
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -80.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 3
script = ExtResource("1_6m2i1")

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(0, 80)
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 8
theme_override_styles/panel = SubResource("StyleBoxEmpty_6m2i1")

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
layout_mode = 2
alignment = 1

[node name="TavernButton" type="Button" parent="PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
text = "Tavern"

[node name="QuestsButton" type="Button" parent="PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
text = "Quests"

[node name="CharacterButton" type="Button" parent="PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
text = "Character"

[node name="AdventuresButton" type="Button" parent="PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
text = "Adventures"

[node name="MoreButton" type="Button" parent="PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
text = "More"
